--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital@1&display=swap" rel="stylesheet">
+	<link href="favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 <body>
     <a class="whatsapp-link" href="https://web.whatsapp.com/send?phone=5599111112222" target="_blank">
